--- a/nitrate.bib
+++ b/nitrate.bib
@@ -1,3 +1,17 @@
+@article{Beaton2012,
+author = {Beaton, A. D., and Cardwell, C. L. and Thomas, R. S. and Sieben, V. J. and Legiret, F.-E. and Waugh, E. M. and Statham, P. J. and Mowlem, M. C. and Morgan, H.},
+title = {Lab-on-chip measurement of nitrate and nitrite for in situ analysis of natural waters},
+journal = {Environmental science & technology},
+volume = {46},
+number = {17},
+pages = {9548-9556},
+doi = {https://doi.org/10.1021/es300419u},
+url = {},
+eprint = {},
+abstract = {},
+year = {2012}
+}
+
 @article{NicholsonFeen2017,
 author = {Nicholson, David P. and Feen, Melanie L.},
 title = {Air calibration of an oxygen optode on an underwater glider},
