--- a/nitrate.bib
+++ b/nitrate.bib
@@ -12,6 +12,35 @@ abstract = {},
 year = {2012}
 }
 
+@article{Becker2019,
+author = {Becker, S. and Aoyama, M. and Woodward, E.M.S. and Bakker, K. and Coverly. S. and Mahaffey, C. and Tanhua, T.}, 
+title = {GO-SHIP Repeat Hydrography Nutrient Manual: The precise and accurate determination of dissolved inorganic nutrients in seawater, using Continuous Flow Analysis methods},
+journal = {},
+volume = {},
+number = {},
+pages = {},
+doi = {https://doi.org/10.25607/OBP-555},
+url = {},
+eprint = {},
+abstract = {},
+year = {2019}
+}
+
+
+@article{Birchill2019,
+author = {Birchill A.J. and Clinton-Bailey, G. and Hanz, R. and Mawji, E. and Cariou, T. and White, C. and Ussher, S.J. and Worsfold, P.J. and Achterberg, E. P. and Mowlem, M.}, 
+title = {Realistic measurement uncertainties for marine macronutrient measurements conducted using gas segmented flow and Lab-on-Chip techniques},
+journal = {Talanta},
+volume = {200},
+number = {},
+pages = {228-235},
+doi = {https://doi.org/10.1016/j.talanta.2019.03.032},
+url = {},
+eprint = {},
+abstract = {},
+year = {2019}
+}
+
 @article{NicholsonFeen2017,
 author = {Nicholson, David P. and Feen, Melanie L.},
 title = {Air calibration of an oxygen optode on an underwater glider},
