--- a/nitrate.bib
+++ b/nitrate.bib
@@ -153,7 +153,7 @@ abstract = {},
 year = {2018}
 }
 
-@article{Vincent2018,
+@article{Zhu2021,
 author = {Zhu, X. and Yu, K. and Zhu, X. and Su, J. and Wu, C.}, 
 title = {An Improved Algorithm for Measuring Nitrate Concentrations in Seawater Based on Deep-Ultraviolet Spectrophotometry: A Case Study of the Aoshan Bay Seawater and Western Pacific Seawater},
 journal = {Sensors},
