--- a/nitrate.bib
+++ b/nitrate.bib
@@ -69,6 +69,20 @@ abstract = {},
 year = {1858}
 }
 
+@article{Johnson1989,
+author = {Johnson, Kenneth S. and Sakamoto-Arnold, Carole M. and Beehler, Carl L.}, 
+title = {Continuous determination of nitrate concentrations in situ},
+journal = {Deep Sea Research Part I: Oceanographic Research Papers},
+volume = {36},
+number = {9},
+pages = {1407-1413},
+doi = {https://doi.org/10.1016/0198-0149(89)90091-5},
+url = {},
+eprint = {},
+abstract = {},
+year = {1989}
+}
+
 @article{Johnson2002,
 author = {Johnson, Kenneth and Coletti, Luke}, 
 title = {In situ ultraviolet spectrophotometry for high resolution and long-term monitoring of nitrate, bromide and bisulfide in the ocean},
