--- a/nitrate.bib
+++ b/nitrate.bib
@@ -1,3 +1,12 @@
+@article{Bastian1957,
+  title={Ultraviolet Spectrophotometric Determination of Nitrate...Application to Analysis of Alkaline Carbonates},
+  author={Robert Bastian and Richard. Weberling and Frank. Palilla},
+  journal={Analytical Chemistry},
+  year={1957},
+  volume={29},
+  pages={1795-1797}
+}
+
 @article{Beaton2012,
 author = {Beaton, A. D., and Cardwell, C. L. and Thomas, R. S. and Sieben, V. J. and Legiret, F.-E. and Waugh, E. M. and Statham, P. J. and Mowlem, M. C. and Morgan, H.},
 title = {Lab-on-chip measurement of nitrate and nitrite for in situ analysis of natural waters},
@@ -69,6 +78,17 @@ abstract = {},
 year = {1858}
 }
 
+@article{hull2021,
+author = {Hull, T. and Greenwood, N. and Birchill, A. and Beaton, A. and Palmer, M. and Kaiser, J.},
+title = {Simultaneous assessment of oxygen and nitrate-based net community production in a temperate shelf sea from a single ocean glider},
+journal = {Biogeosciences Discussions},
+volume = {2021},
+year = {2021},
+pages = {1--25},
+url = {https://bg.copernicus.org/preprints/bg-2021-170/},
+doi = {https://doi.org/10.5194/bg-2021-170}
+}
+
 @article{Johnson1989,
 author = {Johnson, Kenneth S. and Sakamoto-Arnold, Carole M. and Beehler, Carl L.}, 
 title = {Continuous determination of nitrate concentrations in situ},
@@ -109,6 +129,19 @@ url = {},
 eprint = {},
 abstract = {},
 year = {2018}
+}
+
+@article{Meyer2018,
+author={Meyer, David and Prien, Ralf D. and Rautmann, Louis and Pallentin, Malte and Waniek, Joanna J. and Schulz-Bull, Detlef E.},   
+title={In situ Determination of Nitrate and Hydrogen Sulfide in the Baltic Sea Using an Ultraviolet Spectrophotometer},      
+journal={Frontiers in Marine Science},      
+volume={5},     
+pages={431},     
+year={2018},      
+url={https://www.frontiersin.org/article/10.3389/fmars.2018.00431},       	
+doi={https://doi.org/10.3389/fmars.2018.00431},      
+issn={2296-7745},   
+abstract={Evaluating the health status of marine ecosystems becomes ever increasingly important especially against the backdrop of rising pressures from human activities. This is true especially for coastal seas such as the Baltic Sea that is surrounded by highly industrialized countries. Nutrients and pollutants such as nitrate and hydrogen sulfide, which have a major impact on ecosystem functioning, are two of several key environmental indicators for assessing the status of natural waters, and therefore of considerable interest. The frequency and the spatial coverage of the nitrate and hydrogen sulfide measurements are currently limited by the cost of the laboratory analysis and personnel. Optical in situ sensors can help to overcome this challenge by allowing reagentless and fast detection of dissolved chemical species. A chemical-free optical sensor has been used for direct and simultaneous measurements of both key parameters, and the results were compared with traditional methods. The data were collected during an observational program conducted in the Baltic Sea in February 2018. We used the OPUS UV spectral sensor, which was deployed for the first time in coastal waters, in combination with a deep-sea telemetry system to enable near-real time measurements during CTD profiling. Data processing was carried out using a multiple linear regression procedure. Measurements from both OPUS and on-board analysis were in good agreement. The results showed, that in situ UV-VIS spectrophotometry provides the capability to determine the concentration distributions of nitrate and hydrogen sulfide in the brackish waters of the Baltic Sea.}
 }
 
 @article{Sakamoto2009,
