--- a/nitrate.bib
+++ b/nitrate.bib
@@ -21,20 +21,18 @@ abstract = {},
 year = {2012}
 }
 
-@article{Becker2019,
-author = {Becker, S. and Aoyama, M. and Woodward, E.M.S. and Bakker, K. and Coverly. S. and Mahaffey, C. and Tanhua, T.}, 
-title = {GO-SHIP Repeat Hydrography Nutrient Manual: The precise and accurate determination of dissolved inorganic nutrients in seawater, using Continuous Flow Analysis methods},
-journal = {},
-volume = {},
-number = {},
-pages = {},
-doi = {https://doi.org/10.25607/OBP-555},
-url = {},
-eprint = {},
-abstract = {},
-year = {2019}
+@article{Becker2020,
+author={Becker, Susan and Aoyama, Michio and Woodward, E. Malcolm S. and Bakker, Karel and Coverly, Stephen and Mahaffey, Claire and Tanhua, Toste},   	 
+title={GO-SHIP Repeat Hydrography Nutrient Manual: The Precise and Accurate Determination of Dissolved Inorganic Nutrients in Seawater, Using Continuous Flow Analysis Methods},      
+juornal={Frontiers in Marine Science},     
+volume={7},      
+pages={908},     
+year={2020},      
+url={https://www.frontiersin.org/article/10.3389/fmars.2020.581790},       
+doi={https://doi.org/10.3389/fmars.2020.581790},      
+issn={2296-7745},   
+abstract={The GO-SHIP nutrient manual covers all aspects of nutrient analysis from basic sample collection and storage, specifically for Continuous Flow analysis using an Auto-Analyzer, and describes some specific nutrient methods for Nitrate, Nitrite, Silicate, Phosphate and Ammonium that are in use by many laboratories carrying out at-sea analysis and repeat hydrography sections across the world. The focus is on segmented flow analyzers not flow injection analyzers. It also covers laboratory best practices including quality control and quality assurance (QC/QA) procedures to obtain the best results, and suggests protocols for the use of reference materials (RM) and certified reference materials (CRMs).}
 }
-
 
 @article{Birchill2019,
 author = {Birchill A.J. and Clinton-Bailey, G. and Hanz, R. and Mawji, E. and Cariou, T. and White, C. and Ussher, S.J. and Worsfold, P.J. and Achterberg, E. P. and Mowlem, M.}, 
