--- a/nitrate.bib
+++ b/nitrate.bib
@@ -24,7 +24,7 @@ year = {2012}
 @article{Becker2020,
 author={Becker, Susan and Aoyama, Michio and Woodward, E. Malcolm S. and Bakker, Karel and Coverly, Stephen and Mahaffey, Claire and Tanhua, Toste},   	 
 title={GO-SHIP Repeat Hydrography Nutrient Manual: The Precise and Accurate Determination of Dissolved Inorganic Nutrients in Seawater, Using Continuous Flow Analysis Methods},      
-juornal={Frontiers in Marine Science},     
+journal={Frontiers in Marine Science},     
 volume={7},      
 pages={908},     
 year={2020},      
@@ -35,7 +35,7 @@ abstract={The GO-SHIP nutrient manual covers all aspects of nutrient analysis fr
 }
 
 @article{Birchill2019,
-author = {Birchill A.J. and Clinton-Bailey, G. and Hanz, R. and Mawji, E. and Cariou, T. and White, C. and Ussher, S.J. and Worsfold, P.J. and Achterberg, E. P. and Mowlem, M.}, 
+author = {Birchill, A.J. and Clinton-Bailey, G. and Hanz, R. and Mawji, E. and Cariou, T. and White, C. and Ussher, S.J. and Worsfold, P.J. and Achterberg, E. P. and Mowlem, M.}, 
 title = {Realistic measurement uncertainties for marine macronutrient measurements conducted using gas segmented flow and Lab-on-Chip techniques},
 journal = {Talanta},
 volume = {200},
