Corrected two typos in references list

--- a/nitrate.bib
+++ b/nitrate.bib
@@ -76,13 +76,13 @@ abstract = {},
 year = {1858}
 }
 
-@article{hull2021,
+@article{Hull2021,
 author = {Hull, T. and Greenwood, N. and Birchill, A. and Beaton, A. and Palmer, M. and Kaiser, J.},
 title = {Simultaneous assessment of oxygen and nitrate-based net community production in a temperate shelf sea from a single ocean glider},
 journal = {Biogeosciences Discussions},
 volume = {2021},
 year = {2021},
-pages = {1--25},
+pages = {1-25},
 url = {https://bg.copernicus.org/preprints/bg-2021-170/},
 doi = {https://doi.org/10.5194/bg-2021-170}
 }
