updated hull url and added daniel2020

--- a/nitrate.bib
+++ b/nitrate.bib
@@ -48,6 +48,19 @@ abstract = {},
 year = {2019}
 }
 
+@article{Daniel2020,
+author={Daniel, Anne and Laës-Huon, Agathe and Barus, Carole and Beaton, Alexander D. and Blandfort, Daniel and Guigues, Nathalie and Knockaert, Marc and Munaron, Dominique and Salter, Ian and Woodward, E. Malcolm S. and Greenwood, Naomi and Achterberg, Eric P.},   
+title={Toward a Harmonization for Using in situ Nutrient Sensors in the Marine Environment},      
+journal={Frontiers in Marine Science},      
+volume={6},      
+pages={773},     
+year={2020},      
+url={https://www.frontiersin.org/article/10.3389/fmars.2019.00773},       
+doi={10.3389/fmars.2019.00773},      
+issn={2296-7745},   
+abstract={Improved comparability of nutrient concentrations in seawater is required to enhance the quality and utility of measurements reported to global databases. Significant progress has been made over recent decades in improving the analysis and data quality for traditional laboratory measurements of nutrients. Similar efforts are required to establish high-quality data outputs from in situ nutrient sensors, which are rapidly becoming integral components of ocean observing systems. This paper suggests using the good practices routine established for laboratory reference methods to propose a harmonized set of deployment protocols and of quality control procedures for nutrient measurements obtained from in situ sensors. These procedures are intended to establish a framework to standardize the technical and analytical controls carried out on the three main types of in situ nutrient sensors currently available (wet chemical analyzers, ultraviolet optical sensors, electrochemical sensors) for their deployments on all kinds of platform. The routine reference controls that can be applied to the sensors are listed for each step of sensor use: initial qualification under controlled conditions in the laboratory, preparation of the sensor before deployment, field deployment and finally the sensor recovery. The fundamental principles applied to the laboratory reference method are then reviewed in terms of the calibration protocol, instrumental interferences, environmental interferences, external controls, and method performance assessment. Data corrections (linearity, sensitivity, drifts, interferences and outliers) are finally identified along with the concepts and calculations for qualification for both real time and time delayed data. This paper emphasizes the necessity of future collaborations between research groups, reference-accredited laboratories, and technology developers, to maintain comparability of the concentrations reported for the various nutrient parameters measured by in situ sensors.}
+}
+
 @article{Finch1998,
 author = {Finch, M.S. and Hydes, D.J. and Clayson, C.H. and Weigl, B. and Dakin, J.P. and Gwilliam, P.}, 
 title = {A low power ultra violet spectrophotometer for measurement of nitrate in seawater: introduction calibration and initial sea trials},
@@ -83,7 +96,7 @@ journal = {Biogeosciences Discussions},
 volume = {2021},
 year = {2021},
 pages = {1-25},
-url = {https://bg.copernicus.org/preprints/bg-2021-170/},
+url = {https://bg.copernicus.org/articles/18/6167/2021/},
 doi = {https://doi.org/10.5194/bg-2021-170}
 }
 
