--- a/nitrate.bib
+++ b/nitrate.bib
@@ -142,6 +142,19 @@ abstract = {},
 year = {2018}
 }
 
+@ARTICLE{Krahmann2021,
+AUTHOR={Krahmann, Gerd and Arévalo-Martínez, Damian L. and Dale, Andrew W. and Dengler, Marcus and Engel, Anja and Glock, Nicolaas and Grasse, Patricia and Hahn, Johannes and Hauss, Helena and Hopwood, Mark J. and Kiko, Rainer and Loginova, Alexandra N. and Löscher, Carolin R. and Maßmig, Marie and Roy, Alexandra-Sophie and Salvatteci, Renato and Sommer, Stefan and Tanhua, Toste and Mehrtens, Hela},   
+TITLE={Climate-Biogeochemistry Interactions in the Tropical Ocean: Data Collection and Legacy},      
+JOURNAL={Frontiers in Marine Science},      
+VOLUME={8},      
+PAGES={1270},     
+YEAR={2021},      
+URL={https://www.frontiersin.org/article/10.3389/fmars.2021.723304},       
+DOI={10.3389/fmars.2021.723304},      
+ISSN={2296-7745},   
+ABSTRACT={From 2008 to 2019, a comprehensive research project, ‘SFB 754, Climate – Biogeochemistry Interactions in the Tropical Ocean,’ was funded by the German Research Foundation to investigate the climate-biogeochemistry interactions in the tropical ocean with a particular emphasis on the processes determining the oxygen distribution. During three 4-year long funding phases, a consortium of more than 150 scientists conducted or participated in 34 major research cruises and collected a wealth of physical, biological, chemical, and meteorological data. A common data policy agreed upon at the initiation of the project provided the basis for the open publication of all data. Here we provide an inventory of this unique data set and briefly summarize the various data acquisition and processing methods used.}
+}
+
 @article{Meyer2018,
 author={Meyer, David and Prien, Ralf D. and Rautmann, Louis and Pallentin, Malte and Waniek, Joanna J. and Schulz-Bull, Detlef E.},   
 title={In situ Determination of Nitrate and Hydrogen Sulfide in the Baltic Sea Using an Ultraviolet Spectrophotometer},      
